@@ -518,3 +518,4 @@ Fri Feb 19 12:38:05 CST 2016
 
 Sun Feb 21 09:34:09 CST 2016
 - [+] Diary/02-21-2016				[D] ISCA 1973 paper, accelerator
+- [+] include/asm-generic/current.h
